--- a/tmux.conf
+++ b/tmux.conf
@@ -43,9 +43,7 @@ bind - split-window -v
 #Changements pratiques
 ##################################
 #On permet l'utilisation de la souris pour changer de terminal et de panel
-set -g mouse-select-pane on
-set-option -g mouse-select-window on
-set -g mode-mouse on
+set -g mouse on
  
 #Les fenêtres commencent par 1 et non par 0
 set -g base-index 1
