--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,12 @@ bind-key -n M-right select-pane -R
 bind-key -n M-up select-pane -U
 bind-key -n M-down select-pane -D
 
+#ctrl + shift + arrow to resize pane
+bind-key -n C-S-Up resize-pane -U 15
+bind-key -n C-S-Down resize-pane -D 15
+bind-key -n C-S-Left resize-pane -L 25
+bind-key -n C-S-Right resize-pane -R 25
+
 #Swap window
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
