change move tab shortcut

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,8 +26,8 @@ bind-key -n C-S-Left resize-pane -L 25
 bind-key -n C-S-Right resize-pane -R 25
 
 #Swap window
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n S-Left swap-window -t -1
+bind-key -n S-Right swap-window -t +1
 
 #vi mode
 setw -g mode-keys vi
