bugfix on mouse for tmux>=2.1

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,7 +49,9 @@ bind - split-window -v
 #Changements pratiques
 ##################################
 #On permet l'utilisation de la souris pour changer de terminal et de panel
-set -g mouse on
+#https://github.com/tmux/tmux/issues/145#issuecomment-149153883
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -    e'"
+
  
 #Les fenêtres commencent par 1 et non par 0
 set -g base-index 1
@@ -73,3 +75,4 @@ set -g status-attr dim
 # On surligne les fenêtres actives dans la barre de status en gris foncés
 set-window-option -g window-status-current-fg colour15
 set-window-option -g window-status-current-bg colour0
+
